--- a/source/photo.html
+++ b/source/photo.html
@@ -12,39 +12,47 @@
 
 <body class="body">
   <header class="header js-header is-no-js">
-    <div class="header__wrapper">
-      <div class="header__top">
-        <a class="logo logo_mobile" href="index.html">
-          <svg class="icon icon_second icon_logo-mobile">
-            <use xlink:href="img/sprite.svg#logo-pink-white-mobile"></use>
-          </svg>
-        </a>
-        <button class="header__btn js-header__btn">
-          <svg class="icon icon_second icon_burger js-icon_toggle is-opened">
-            <use xlink:href="img/sprite.svg#icon-menu-burger"></use>
-          </svg>
-          <svg class="icon icon_second icon_close js-icon_toggle">
-            <use xlink:href="img/sprite.svg#icon-menu-cross"></use>
-          </svg>
-        </button>
+    <div class="container container_header">
+      <div class="header__wrapper">
+        <div class="header__top">
+          <a class="logo logo_header" href="index.html">
+            <svg class="icon icon_second icon_logo-mobile">
+              <use xlink:href="img/sprite.svg#logo-pink-white-mobile"></use>
+            </svg>
+            <svg class="icon icon_second icon_logo-tablet">
+              <use xlink:href="img/sprite.svg#logo-pink-white-tablet"></use>
+            </svg>
+            <svg class="icon icon_second icon_logo-desktop">
+              <use xlink:href="img/sprite.svg#logo-pink-white-desktop"></use>
+            </svg>
+          </a>
+          <button class="header__btn js-header__btn">
+            <svg class="icon icon_second icon_burger js-icon_toggle is-opened">
+              <use xlink:href="img/sprite.svg#icon-menu-burger"></use>
+            </svg>
+            <svg class="icon icon_second icon_close js-icon_toggle">
+              <use xlink:href="img/sprite.svg#icon-menu-cross"></use>
+            </svg>
+          </button>
+        </div>
       </div>
+      <nav class="nav js-nav is-no-js">
+        <ul class="nav__list">
+          <li class="nav__item">
+            <a class="nav__link is-active">Главная</a>
+          </li>
+          <li class="nav__item">
+            <a class="nav__link" href="photo.html">Фотографии</a>
+          </li>
+          <li class="nav__item">
+            <a class="nav__link" href="form.html">Конкурс</a>
+          </li>
+          <li class="nav__item">
+            <a class="nav__link" href="https://htmlacademy.ru/intensive/adaptive" target="_blank">HTML Academy</a>
+          </li>
+        </ul>
+      </nav>
     </div>
-    <nav class="nav js-nav is-no-js">
-      <ul class="nav__list">
-        <li class="nav__item">
-          <a class="nav__link" href="index.html">Главная</a>
-        </li>
-        <li class="nav__item">
-          <a class="nav__link is-active">Фотографии</a>
-        </li>
-        <li class="nav__item">
-          <a class="nav__link" href="form.html">Конкурс</a>
-        </li>
-        <li class="nav__item">
-          <a class="nav__link" href="https://htmlacademy.ru/intensive/adaptive" target="_blank">Html Academy</a>
-        </li>
-      </ul>
-    </nav>
   </header>
   <main class="main">
     <section class="banner">
