--- a/source/index.html
+++ b/source/index.html
@@ -10,6 +10,7 @@
 </head>
 
 <body class="body">
+  <!-- Ретинизация -->
   <header class="header js-header is-no-js">
     <div class="container container_header">
       <div class="header__wrapper">
