--- a/source/index.html
+++ b/source/index.html
@@ -289,7 +289,9 @@
         <img class="image" src="./img/bg-triangle-white-footer.svg" alt="Фон блока">
       </div>
     </section>
-    <section class="map"></section>
+    <section class="map">
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6159425987807!2d30.323182336479817!3d59.938514796155346!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTExODY!5e0!3m2!1sru!2sru!4v1564660676444!5m2!1sru!2sru" width="100%" height="100%" frameborder="0" style="border:0" allowfullscreen></iframe>
+    </section>
   </main>
   <footer class="footer footer_none-mobile">
     <div class="container">
