--- a/source/photo.html
+++ b/source/photo.html
@@ -39,10 +39,10 @@
       <nav class="nav js-nav is-no-js">
         <ul class="nav__list">
           <li class="nav__item">
-            <a class="nav__link is-active">Главная</a>
+            <a class="nav__link" href="index.html">Главная</a>
           </li>
           <li class="nav__item">
-            <a class="nav__link" href="photo.html">Фотографии</a>
+            <a class="nav__link is-active">Фотографии</a>
           </li>
           <li class="nav__item">
             <a class="nav__link" href="form.html">Конкурс</a>
